# issue-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  package-lock.json  package.json  playwright.config.js  pyproject.toml  start-issue-agent.ps1  打开 Issue Agent.cmd
.github/workflows/: ci.yml
app/: __init__.py  agent.py  auth.py  build.py  circuit_breaker.py  cli.py  config.py  db.py  errors.py  events.py  evidence.py  github.py  i18n.py  json_utils.py  logging_config.py  main.py  models.py  provider.py  report_generator.py  retry.py  reviewer.py  services.py  sessions.py  task_queue.py  tools.py
app/static/css/: base.css  github-theme.css  primer.css  runtime.css
app/static/js/: app.js  charts.js  core.js  motion.js  session-runtime.js
app/templates/: index.html
e2e/: ui.spec.js
tests/: conftest.py  test_agent.py  test_auth.py  test_build.py  test_circuit_breaker.py  test_cli.py  test_css_namespace.py  test_github.py  test_i18n_sync.py  test_js_structure.py  test_launcher.py  test_logging_config.py  test_main.py  test_provider.py  test_reviewer.py  test_sessions.py  test_task_queue.py  test_tools.py  test_ts_migration_decision.py
wiki/: API-Reference.md  Architecture.md  Configuration.md  Deployment.md  Development-Guide.md  Home.md
