[project]
name = "github-issue-agent"
version = "0.4.0"
description = "GitHub Issue analysis agent with safe, opt-in pull request creation"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["github", "issue", "agent", "code-analysis", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Bug Tracking",
]
dependencies = [
  "aiosqlite>=0.20,<1",
  "fastapi>=0.128,<1",
  "httpx>=0.28,<1",
  "jinja2>=3.1,<4",
  "openai>=2.11,<3",
  "pydantic-settings>=2.7,<3",
  "rich>=13,<14",
  "uvicorn[standard]>=0.34,<1",
]

[project.scripts]
issue-agent = "app.cli:main"

[project.urls]
Homepage = "https://github.com/xiaomaozjj666/issue-agent"
Repository = "https://github.com/xiaomaozjj666/issue-agent"

[project.optional-dependencies]
dev = [
  "httpx2>=2,<3",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.8,<1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.setuptools.package-data]
app = ["py.typed", "templates/*.html", "static/css/*.css", "static/js/*.js"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "tests*"]
